--- a/templates/shaper_helixultimate/css/presets/default.css
+++ b/templates/shaper_helixultimate/css/presets/default.css
@@ -125,44 +125,6 @@ ul.social-icons > li {
 .body-wrapper #sp-header.style-2 .container, .body-wrapper #sp-top-bar.style-2 .container {
   max-width: 1360px;
 }
-
-/*----------------------------CUSTOM CSS--------------------------*/
-.sp-submenu .menu{
-  list-style: none;
-  margin: 0;
-}
-
-.sp-submenu .menu li{
-  display: inline-block;
-    position: relative;
-    padding: 0 0 21px;
-    margin: 0 20px -21px;
-    line-height: 60px; 
-}
-.sp-megamenu-parent > li:last-child{
-  margin: 0 0px 0 20px;
-}
-.sp-submenu .menu li a{
-  color:white;
-}
-
-#user-menu{
-  font-size: 35px;
-  display: inline-block;
-  color: white;
-  float:right;
-}
-
-.submenu-container .sp-module{
-  display: inline-block;
-  float: right;
-}
-/*----------------------------------------------------------------*/
-.sp-copyright{
-      display: block;
-    text-align: center;
-}
-
 @media (min-width: 320px) and (max-width: 991px) {
   .body-wrapper #sp-header.style-3 #sp-menu {
     text-align: right;
@@ -910,7 +872,7 @@ ul.social-icons > li {
 }
 #sp-footer .sppb-link-list-wrap ul li:before, #sp-footer .sppb-addon-module ul li:before, #sp-footer .sppb-link-list-wrap .menu li:before, #sp-footer .sppb-addon-module .menu li:before {
   content: ".";
-  color: #0a4aaf;
+  color: #7a6cea;
   font-size: 18px;
   line-height: 20px;
   position: relative;
@@ -2439,7 +2401,6 @@ input[type="text"]:not(.form-control):focus, input[type="email"]:not(.form-contr
 .sp-megamenu-wrapper {
   width: auto;
   display: table;
-  /*margin: 0 auto;*/
   float: right;
 }
 @media (min-width: 320px) and (max-width: 991px) {
@@ -2465,7 +2426,6 @@ input[type="text"]:not(.form-control):focus, input[type="email"]:not(.form-contr
 .sp-megamenu-parent > li {
   display: inline-block;
   position: relative;
-  /*padding: 0 0 21px;*/
   margin: 0 20px -21px;
   line-height: 60px;
 }
@@ -2841,9 +2801,11 @@ body.offcanvas-active {
   font-size: 20px;
   color: #2d2d2d;
 }
- 
-@media (max-width: 991px) { #offcanvas-toggler { display: block !important; } }
-
+@media (max-width: 991px) {
+  #offcanvas-toggler {
+    display: block !important;
+  }
+}
 #offcanvas-toggler:hover {
   color: #0a4aaf;
 }
@@ -6204,102 +6166,138 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
   height: auto !important;
   max-width: 100%;
 }
+.sp-submenu .menu {
+  list-style: none;
+  margin: 0;
+}
+.sp-submenu .menu li {
+  display: inline-block;
+  position: relative;
+  padding: 0 0 21px;
+  margin: 0 20px -21px;
+  line-height: 60px;
+}
+.sp-megamenu-parent > li:last-child {
+  margin: 0 0px 0 20px;
+}
+.sp-submenu .menu li a {
+  color: white;
+}
+#user-menu {
+  font-size: 35px;
+  display: inline-block;
+  color: white;
+  float: right;
+}
+.submenu-container .sp-module {
+  display: inline-block;
+  float: right;
+}
+.sp-copyright {
+  display: block;
+  text-align: center;
+}
 .element-invisible {
-    display: none!important;
+  display: none !important;
 }
-
-.sp-module-border-none{
-  border: none!important;
+.sp-module-border-none {
+  border: none !important;
 }
-
 /* -------------------------------------------------------------
-   Pure CSS Toggle Switch with :checked
-   ---------------------------------------------------------- */
+ Pure CSS Toggle Switch with :checked
+ ---------------------------------------------------------- */
 .onoffswitch {
-    position: relative;
-    display: inline-block;
-    width: 100px;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select: none;
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 .onoffswitch-checkbox {
-    display: none;
+  display: none;
 }
 .onoffswitch-label {
-    display: block;
-    overflow: hidden;
-    cursor: pointer;
-    border: 2px solid #E3E3E3;
-    border-radius: 0px;
-    margin: 0;
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #e3e3e3;
+  border-radius: 0px;
+  margin: 0;
 }
 .onoffswitch-inner {
-    display: block; width: 200%; margin-left: -100%;
-    transition: margin 0.3s ease-in 0s;
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
 }
 .onoffswitch-inner:before, .onoffswitch-inner:after {
-    display: block; float: left; width: 50%; height: 36px; padding: 0; line-height: 32px;
-    font-size: 16px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
-    box-sizing: border-box;
-    border: 2px solid transparent;
-    background-clip: padding-box;
+  display: block;
+  float: left;
+  width: 50%;
+  height: 36px;
+  padding: 0;
+  line-height: 32px;
+  font-size: 16px;
+  color: white;
+  font-family: Trebuchet, Arial, sans-serif;
+  font-weight: bold;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+  background-clip: padding-box;
 }
 .onoffswitch-inner:before {
-    content: "";
-    padding-left: 10px;
-    background-color: #FFFFFF; color: #FFFFFF;
+  content: "";
+  padding-left: 10px;
+  background-color: #fff;
+  color: #fff;
 }
 .onoffswitch-inner:after {
-    content: "";
-    padding-right: 10px;
-    background-color: #FFFFFF; color: #666666;
-    text-align: right;
+  content: "";
+  padding-right: 10px;
+  background-color: #fff;
+  color: #666;
+  text-align: right;
 }
 .onoffswitch-switch {
-    display: block;
-    width: 50px;
-    margin: 0px;
-    background: #A1A1A1;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 49px;
-    transition: all 0.3s ease-in 0s;
+  display: block;
+  width: 50px;
+  margin: 0px;
+  background: #a1a1a1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 49px;
+  transition: all 0.3s ease-in 0s;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
+  margin-left: 0;
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px; 
-    background-color: #27A1CA; 
+  right: 0px;
+  background-color: #27a1ca;
 }
-
-.mensual-span{
+.mensual-span {
   bottom: 10px;
-    position: relative;
-    right: 10px;
-    font-size: 30px;
+  position: relative;
+  right: 10px;
+  font-size: 30px;
 }
-
-.anual-span{
+.anual-span {
   bottom: 10px;
-    position: relative;
-    left: 10px;
-    font-size: 30px;
+  position: relative;
+  left: 10px;
+  font-size: 30px;
 }
-
 #sp-right .menu-social-blog ul {
   display: table;
   margin-right: auto;
   margin-left: auto;
 }
-
 #sp-right .menu-social-blog ul > li {
   float: left;
   margin: 0px 15px;
 }
-
 #sp-right .menu-social-blog ul > li > a:before {
   font-size: 40px;
 }
