--- a/templates/shaper_helixultimate/css/presets/default.css
+++ b/templates/shaper_helixultimate/css/presets/default.css
@@ -3954,6 +3954,7 @@ input[type="radio"], input[type="checkbox"] {
 }
 input[type="file"], input[type="image"], input[type="submit"], input[type="reset"], input[type="button"], input[type="radio"], input[type="checkbox"] {
   width: auto;
+  position: relative;
 }
 select, input[type="file"] {
   height: 50px;
@@ -4211,7 +4212,6 @@ input.search-query {
   vertical-align: middle;
 }
 .form-search .radio input[type="radio"], .form-search .checkbox input[type="checkbox"], .form-inline .radio input[type="radio"], .form-inline .checkbox input[type="checkbox"] {
-  float: left;
   margin-right: 3px;
   margin-left: 0;
 }
@@ -6316,9 +6316,9 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
   content: "\f002";
 }
 form.form-search .btn {
-  padding: 13px 15px;
+  padding: 15px 17px;
   float: left;
-  font-size: 24px;
+  border-radius: 0;
 }
 form.form-search #mod-finder-searchword121 {
   float: left;
