--- a/templates/shaper_helixultimate/scss/custom.scss
+++ b/templates/shaper_helixultimate/scss/custom.scss
@@ -146,9 +146,9 @@
 }
 
 form.form-search .btn {
-  padding: 13px 15px;
+  padding: 15px 17px;
   float: left;
-  font-size: 24px;
+  border-radius: 0;
 }
 form.form-search #mod-finder-searchword121 {
   float: left;
