--- a/templates/shaper_helixultimate/scss/forms.scss
+++ b/templates/shaper_helixultimate/scss/forms.scss
@@ -682,6 +682,7 @@ input[type="button"],
 input[type="radio"],
 input[type="checkbox"] {
   width: auto; // Override of generic input selector
+  position: relative;
 }
 
 // Set the height of select and file controls to match text inputs
@@ -1138,7 +1139,7 @@ input.search-query {
 .form-search .checkbox input[type="checkbox"],
 .form-inline .radio input[type="radio"],
 .form-inline .checkbox input[type="checkbox"] {
-  float: left;
+  //float: left;
   margin-right: 3px;
   margin-left: 0;
 }
