--- a/templates/shaper_helixultimate/scss/custom.scss
+++ b/templates/shaper_helixultimate/scss/custom.scss
@@ -104,6 +104,66 @@
   right: 0px;
   background-color: #27A1CA;
 }
+/* ------------------------------------------------------------------------- */
+.onoffswitch-2 {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select: none;
+}
+.onoffswitch-2-checkbox {
+  display: none;
+}
+.onoffswitch-2-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid #E3E3E3;
+  border-radius: 0px;
+  margin: 0;
+}
+.onoffswitch-2-inner {
+  display: block; width: 200%; margin-left: -100%;
+  transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-2-inner:before, .onoffswitch-2-inner:after {
+  display: block; float: left; width: 50%; height: 36px; padding: 0; line-height: 32px;
+  font-size: 16px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+.onoffswitch-2-inner:before {
+  content: "";
+  padding-left: 10px;
+  background-color: #FFFFFF; color: #FFFFFF;
+}
+.onoffswitch-2-inner:after {
+  content: "";
+  padding-right: 10px;
+  background-color: #FFFFFF; color: #666666;
+  text-align: right;
+}
+.onoffswitch-2-switch {
+  display: block;
+  width: 50px;
+  margin: 0px;
+  background: #A1A1A1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 49px;
+  transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-2-checkbox:checked + .onoffswitch-2-label .onoffswitch-2-inner {
+  margin-left: 0;
+}
+.onoffswitch-2-checkbox:checked + .onoffswitch-2-label .onoffswitch-2-switch {
+  right: 0px;
+  background-color: #27A1CA;
+}
 .mensual-span {
   bottom: 10px;
   position: relative;
@@ -153,4 +213,8 @@ form.form-search .btn {
 form.form-search #mod-finder-searchword121 {
   float: left;
   max-width: 236px;
+}
+
+.tab-2-content{
+  display:none;
 }
