--- a/templates/shaper_helixultimate/css/presets/default.css
+++ b/templates/shaper_helixultimate/css/presets/default.css
@@ -6322,6 +6322,9 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
   -moz-user-select: none;
   -ms-user-select: none;
 }
+.anual-2-span, .mensual-2-span {
+  color: #006cff !important;
+}
 .onoffswitch-2-checkbox {
   display: none;
 }
@@ -6329,7 +6332,7 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
   display: block;
   overflow: hidden;
   cursor: pointer;
-  border: 2px solid #08ae99;
+  border: 2px solid #006cff;
   border-radius: 0px;
   margin: 0;
 }
@@ -6371,7 +6374,7 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
   display: block;
   width: 50px;
   margin: 0px;
-  background: #08ae99;
+  background: #006cff;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -6383,15 +6386,16 @@ body .sppb-addon-ajax-contact.custom .sppb-form-control {
 }
 .onoffswitch-2-checkbox:checked + .onoffswitch-2-label .onoffswitch-2-switch {
   right: 0px;
-  background-color: #08ae99;
+  background-color: #006cff;
 }
-.mensual-span {
+/*-----------------------------------------------------------*/
+.mensual-span, .mensual-2-span {
   bottom: 10px;
   position: relative;
   right: 10px;
   font-size: 30px;
 }
-.anual-span {
+.anual-span, .anual-2-span {
   bottom: 10px;
   position: relative;
   left: 10px;
