--- a/templates/shaper_helixultimate/scss/custom.scss
+++ b/templates/shaper_helixultimate/scss/custom.scss
@@ -126,7 +126,7 @@
   -ms-user-select: none;
 }
 .anual-2-span,.mensual-2-span{
-  color:#006cff !important;
+  color:#044f96 !important;
 }
 .onoffswitch-2-checkbox {
   display: none;
@@ -135,7 +135,7 @@
   display: block;
   overflow: hidden;
   cursor: pointer;
-  border: 2px solid #006cff;
+  border: 2px solid #044f96;
   border-radius: 0px;
   margin: 0;
 }
@@ -165,7 +165,7 @@
   display: block;
   width: 50px;
   margin: 0px;
-  background: #006cff;
+  background: #044f96;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -177,7 +177,7 @@
 }
 .onoffswitch-2-checkbox:checked + .onoffswitch-2-label .onoffswitch-2-switch {
   right: 0px;
-  background-color: #006cff;
+  background-color: #044f96;
 }
 /*-----------------------------------------------------------*/
 .mensual-span,.mensual-2-span {
