--- a/templates/shaper_helixultimate/scss/theme.scss
+++ b/templates/shaper_helixultimate/scss/theme.scss
@@ -1641,8 +1641,9 @@ select {
           font-weight: bold;
         }
         .article-introtext {
-          font-size: 14px;
-          line-height: 20px;
+          font-size: 18px;
+          line-height: 30px;
+          font-weight: 300;
         }
         .readmore {
           text-transform: uppercase;
