new file:   images/blog/Cognitive_computing_ayuda_tu_compania_Leaderablog_1.jpg 	new file:   images/blog/Cognitive_computing_ayuda_tu_compania_Leaderablog_2.jpg 	new file:   images/blog/IA_aplicada_servicios_Leaderablog_1.jpg 	new file:   images/blog/IA_aplicada_servicios_Leaderablog_2.jpg 	modified:   templates/shaper_helixultimate/css/presets/default.css

--- a/templates/shaper_helixultimate/css/presets/default.css
+++ b/templates/shaper_helixultimate/css/presets/default.css
@@ -1344,8 +1344,9 @@ input[type="text"]:not(.form-control):focus, input[type="email"]:not(.form-contr
   font-weight: bold;
 }
 #sp-component .blog .article-list .article .article-introtext {
-  font-size: 14px;
-  line-height: 20px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 300;
 }
 #sp-component .blog .article-list .article .readmore {
   text-transform: uppercase;
