--- a/templates/shaper_helixultimate/scss/custom.scss
+++ b/templates/shaper_helixultimate/scss/custom.scss
@@ -229,8 +229,21 @@ form.form-search .btn {
 form.form-search #mod-finder-searchword121 {
   float: left;
   max-width: 236px;
+  @media screen and (max-width: 320px) {
+    max-width: 180px;
+  }
+  @media screen and (max-width: 768px) {
+    max-width: 220px;
+  }
 }
 
 .tab-2-content{
   display:none;
+}
+
+
+.layout-blog .sp-section-1 {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
