--- a/templates/shaper_helixultimate/scss/custom.scss
+++ b/templates/shaper_helixultimate/scss/custom.scss
@@ -380,4 +380,7 @@ form.form-search .btn {
   .layout-blog #sp-section-1{
     display: none;
   }
+  .view-article #sp-section-1{
+    display: none;
+  }
 }
